--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,13 @@
       content="This Portfolio site created using React.js"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Taranpreet || Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   </body>
 </html>
